fix: meta going too close to right edge on tablet

--- a/ArticleTemplates/assets/scss/garnett-type/_media-video.scss
+++ b/ArticleTemplates/assets/scss/garnett-type/_media-video.scss
@@ -22,6 +22,7 @@
                         .meta__pubdate {
                             padding-top: 8px;
                             padding-left: 12px;
+                            padding-right: 12px;
                         }
                         .meta__pubdate {
                             padding-bottom: 16px;
